--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <article>
         <h1>We&rsquo;ll be back soon!</h1>
         <div>
-            <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:#">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
+            <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. We&rsquo;ll be back online shortly!</p>
             <p>&mdash; Zylera</p>
             
         </div>
@@ -33,7 +33,7 @@
     </article>
     <script>
         const countDown = () => {
-            const countDay = new Date('December 28, 2022 00:00:00');
+            const countDay = new Date('September 30, 2023 00:00:00');
             const now = new Date();
             const counter = countDay - now;
             const second = 1000;
